opencv: account for sparse/padded formats when converting caps to cv image type

https://bugzilla.gnome.org/show_bug.cgi?id=774576