gst-libs/gst/opencv/gstopencvutils.h
@@ -29,7 +29,6 @@
 #include <gst/gst.h>
 #include <gst/video/video.h>
 
-
 G_BEGIN_DECLS
 
 gboolean gst_opencv_parse_iplimage_params_from_caps
@@ -40,7 +39,11 @@ gboolean gst_opencv_iplimage_params_from_video_info
     (GstVideoInfo * info, gint * width, gint * height, gint * depth,
     gint * channels, GError ** err);
 
+gboolean gst_opencv_cv_image_type_from_video_format (GstVideoFormat format,
+    int * cv_type, GError ** err);
+
 GstCaps * gst_opencv_caps_from_cv_image_type (int cv_type);
+
 G_END_DECLS
 
 #endif /* __GST_OPENCV_UTILS__ */
